<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShopSmartPrivate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_market_map">商场地图</string>
    <string name="activity_set_market_region">设置商圈Region</string>
    <string name="activity_add_primitive_beacon">添加原始信标</string>
    <string name="activity_private_locating">iBeacon定位</string>
    <string name="activity_private_tracing">iBeacon轨迹</string>
    <string name="activity_trace_list">轨迹列表</string>
    <string name="activity_configure_beacon">配置信标</string>
    <string name="activity_resetting">重置</string>
    <string name="activity_around_activities">附近活动</string>
    <string name="menu_setting">设置</string>
    <string name="label_setting">设置</string>
    <string name="label_current_city">当前城市</string>
    <string name="label_current_market">当前商圈</string>
    <string name="label_region_public">Public Region</string>
    <string name="label_region_activity">Activity Region</string>
    <string name="label_region_trigger">Trigger Region</string>
    <string name="label_add">添加</string>
    <string name="label_show_market_region">显示商圈区域</string>
    <string name="hint_add_region_success">成功添加区域</string>
    <string name="hint_add_region_failure">添加区域失败</string>
    <string name="hint_update_region_success">成功更新区域</string>
    <string name="hint_update_region_failure">更新区域失败</string>
    
    
    
    
    <string name="hint_add_beacon_success">成功添加信标</string>
    <string name="hint_add_beacon_failure">添加信标失败</string>
    <string name="hint_update_beacon_success">成功更新信标</string>
    <string name="hint_update_beacon_failure">更新信标失败</string><string name="label_ask_for_delete">确定删除？</string><string name="label_confirm">确定</string><string name="label_cancel">取消</string><string name="label_delete">删除</string>
    <string name="label_choose_beacon">选择信标</string>
    <string name="label_add_current_beacon">添加当前信标</string>
    <string name="label_show_beacon_info">显示信标信息</string>
    <string name="label_choose_beacon_type">选择信标类型</string>

</resources>