<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.hy.ss.sdk.arcgismap.SSMapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.hy.ss.sdk.arcgismap.SSMapView>

    <Gallery
        android:id="@+id/floor_gallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:spacing="20dp" />

    <LinearLayout
        android:id="@+id/layout_for_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/floor_gallery"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_choose_beacon_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_choose_beacon_type"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_choose_beacon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_choose_beacon"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_add_current_beacon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_add_current_beacon"
            android:textSize="12sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_beacon_type"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/layout_for_buttons"
        android:background="@android:color/darker_gray"
        android:visibility="gone" >
    </ListView>

    <include
        android:id="@+id/layout_beacon_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_for_buttons"
        layout="@layout/activity_beacon_list_for_choosing"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_show_beacon_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/label_show_beacon_info"
        android:textSize="12sp" />

</RelativeLayout>